added timer but still must adjust the interval conter

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <div class="container">
          <div class="row">
 
-            <div class="col-sm-12">
+            <div class="col-sm-11">
 
                <div id="trivia"></div>
 
+            </div>
+            <div class="col-sm-1">
+               <div id="timer"></div>
             </div>
          </div>
 
