--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+   
    <link rel="stylesheet" href="./Assets/css/TriviaGameStyle.css">
    
 
@@ -19,20 +19,18 @@
 
 <body>
 
-   <!-- <img src="./Assets/images/rugs10Bazzar.jpg" alt="pic of persian rug bazzar"> -->
-
+  
    
 
 
    <div class="container">
+      <marquee> <h2>ANSWER AS MANY QUESTIONS IN THE ALLOTED AMOUNT OF TIME</h2> </marquee>
 
 
       <button class="btn btn-danger btn-lg m-1k" id="startButton">PRESS TO START GAME</button>
    </div>
 
-   <!-- <div class="w3-row w3-large"> -->
-   <!-- <div class="w3-cell-middle w3-container w3-black w3-cell">
-   <h2 >ANSWER AS MANY QUESTIONS IN ALLOTED AMOUNT OF TIME</h2> -->
+  
 
    <div class="container">
       <div class="row">
