--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
 </head>
 
 <body>
-
+   <div class="jumbotron">
+      <h1 class="display-4">WELCOME TO THE PERSIAN RUG TRIVIA GAME</h1>
+      <p class="lead">ANSWER AS MANY QUESTIONS IN THE ALLOTED AMOUNT OF TIME</p>
+      <a><button class="btn btn-danger btn-lg m-1k" id="startButton">PRESS TO START GAME</button></a>
+     
+    </div>
   
    
 
 
-   <div class="container">
+   <!-- <div class="container">
       <marquee> <h2>ANSWER AS MANY QUESTIONS IN THE ALLOTED AMOUNT OF TIME</h2> </marquee>
 
 
-      <button class="btn btn-danger btn-lg m-1k" id="startButton">PRESS TO START GAME</button>
-   </div>
+     
+   </div> -->
 
   
 
